--- a/web/templates/htask/form.html.eex
+++ b/web/templates/htask/form.html.eex
@@ -12,6 +12,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :question_string, class: "control-label" %>
+    <%= text_input f, :question_string, class: "form-control" %>
+    <%= error_tag f, :question_string %>
+  </div>
+
+  <div class="form-group">
     <%= label f, :output, class: "control-label" %>
     <%= text_input f, :output, class: "form-control" %>
     <%= error_tag f, :output %>
