--- a/web/templates/batch/index.html.eex
+++ b/web/templates/batch/index.html.eex
@@ -5,6 +5,7 @@
     <tr>
       <th>Csv file</th>
       <th>Job</th>
+      <th>db id</th>
 
       <th></th>
     </tr>
@@ -14,6 +15,7 @@
     <tr>
       <td><%= Discuss.Csvfile.url({batch.csv_file, batch}) %></td>
       <td><%= batch.job_id %></td>
+      <td><%= batch.id %></td>
 
       <td class="text-right">
         <%= link "Show", to: batch_path(@conn, :show, batch), class: "btn btn-default btn-xs" %>
