--- a/web/templates/batch/show.html.eex
+++ b/web/templates/batch/show.html.eex
@@ -1,20 +1,14 @@
 <h2>Show batch</h2>
 
 <ul>
-
   <li>
     <strong>Csv file:</strong>
-    <%= @batch.csv_file %>
-    <%= Discuss.Csvfile.url({@batch.csvfile, @batch}) %>
+    <%= link @batch.csv_file_name, to: @batch.csv_file_url %>
   </li>
-
   <li>
     <strong>Job:</strong>
     <%= @batch.job_id %>
   </li>
-
-
-
 </ul>
 
 <%= link "Edit", to: batch_path(@conn, :edit, @batch) %>
