--- a/web/templates/job/edit.html.eex
+++ b/web/templates/job/edit.html.eex
@@ -1,6 +1,7 @@
 <h2>Edit job</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: job_path(@conn, :update, @job) %>
+                        action: job_path(@conn, :update, @job),
+                        example_string: @example_string %>
 
 <%= link "Back", to: job_path(@conn, :index) %>
