--- a/web/templates/batch/show.html.eex
+++ b/web/templates/batch/show.html.eex
@@ -11,5 +11,5 @@
   </li>
 </ul>
 
-<%= link "Edit", to: batch_path(@conn, :edit, @batch) %>
+<%= link "Next: Set Options", to: batch_path(@conn, :options, @batch) %> ||<br>
 <%= link "Back", to: batch_path(@conn, :index) %>
